<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@color/seaFoam"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_close" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_location_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/montserrat_black"
                android:gravity="center"
                android:text="@string/enable_location_title"
                android:textColor="@color/ocean"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="12dp"
                android:fontFamily="@font/montserrat_extra_light"
                android:gravity="center"
                android:text="@string/enable_location_content"
                android:textColor="@color/deep_aqua"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGoToSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:fontFamily="@font/montserrat_black"
                    android:gravity="center"
                    android:text="@string/enable_location_go_to_settings"
                    android:textColor="@color/wave"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:fontFamily="@font/montserrat_black"
                    android:gravity="center"
                    android:text="@string/enable_location_close"
                    android:textColor="@color/wave"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

</RelativeLayout>