<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dataItem"
            type="com.raz.weatherapp.models.CityWeatherData" />
    </data>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weather_bg"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCityWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="16dp"
            android:elevation="2dp"
            app:cardBackgroundColor="@color/cream"
            app:cardCornerRadius="30sp"
            app:cardElevation="4dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    bind.matchIcon="@{dataItem.weather[0].id}"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat_extra_light"
                    android:text="@{dataItem.name}"
                    android:textColor="@color/deep_aqua"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat_black"
                    android:text="@{dataItem.weather[0].description}"
                    android:textColor="@color/deep_aqua"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_extra_light"
                        android:gravity="start"
                        android:text="@string/city_page_temp"
                        android:textColor="@color/deep_aqua"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_black"
                        android:gravity="end"
                        android:text="@{dataItem.main.temp.toString() + `C`}"
                        android:textColor="@color/wave"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_extra_light"
                        android:gravity="start"
                        android:text="@string/city_page_feels_like"
                        android:textColor="@color/deep_aqua"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_black"
                        android:gravity="end"
                        android:text="@{dataItem.main.temp.toString() + `C`}"
                        android:textColor="@color/wave"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_extra_light"
                        android:gravity="start"
                        android:text="@string/city_page_temp_min"
                        android:textColor="@color/deep_aqua"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_black"
                        android:gravity="end"
                        android:text="@{dataItem.main.tempMin.toString() + `C`}"
                        android:textColor="@color/wave"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_extra_light"
                        android:gravity="start"
                        android:text="@string/city_page_temp_max"
                        android:textColor="@color/deep_aqua"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_black"
                        android:gravity="end"
                        android:text="@{dataItem.main.tempMax.toString() + `C`}"
                        android:textColor="@color/wave"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_extra_light"
                        android:gravity="start"
                        android:text="@string/city_page_sunrise"
                        android:textColor="@color/deep_aqua"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_black"
                        android:gravity="end"
                        bind.getTs="@{dataItem.sys.sunrise.toString()}"
                        android:textColor="@color/wave"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_extra_light"
                        android:gravity="start"
                        android:text="@string/city_page_sunset"
                        android:textColor="@color/deep_aqua"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_black"
                        android:gravity="end"
                        bind.getTs="@{dataItem.sys.sunset.toString()}"
                        android:textColor="@color/wave"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>